@@ -4,8 +4,7 @@ read
 end
 
 APOLAR name solvated
-	dime 200 200 200
-	glen 20 20 20
+	grid 0.3 0.3 0.3
 	mol 1
 	srfm sacc
 	swin 0.3
