@@ -53,20 +53,19 @@ elec name ref
 end
 
 apolar name asolv
-	dime 200 200 200
-        glen 15 15 15
-        mol 1
-        srfm sacc
-        swin 0.3
-        srad 1.4
-        press 0.00
+	grid 0.1 0.1 0.1
+	mol 1
+	srfm sacc
+	swin 0.3
+	srad 1.4
+	press 0.00
 	gamma 0.00072
-        bconc 0.033
-        sdens 100.0
-        dpos 0.2
-        temp 298.15
-        calcenergy total
-        calcforce comps
+	bconc 0.033
+	sdens 100.0
+	dpos 0.2
+	temp 298.15
+	calcenergy total
+	calcforce comps
 end
 
 # THIS GIVES THE POLAR SOLVATION ENERGY OF THE COMPLEX
