@@ -2,6 +2,7 @@
                                  VERSION 0.5.1       
 #############################################################################
 - NEW FEATURES
+	* Replaced APOLAR->glen and APOLAR->dime keywords with APOLAR->grid
 	* Deprecated mergedx. Added mergedx2
 		- mergedx2 takes the bounding box that a user wishes to calculate a map for, as well as a resolution of the output map. An output map meeting those specifications is calculated and store.
 	* Added pKa tutorial
